Release  8 Sept 09
-------
- More updates than you can shake a stick at. 

Release 18 Jun 09
-------
- (18 Jun 09) Added a atd_strip_on_get option.  Some applications like WordPress grab the editor
  content occasionally for an auto save.  In these cases the app plugin needs to
  strip the AtD tags and this option should be set to false. 
- (19 Jun 09) fixed syntax error in IE and Safari (that FF chose to ignore)... 

Release 1 Jun 09
-------
- (31 May 09) updated plugin to treat -- as a separator.
- (31 May 09) fixed plugin not turning off progress thingie when an AJAX error occurs
- (29 May 09) fixed plugin not highlighting anything when string field of an error
  response is empty.
- (25 May 09) fixed a bug causing underline and some other styles to get mangled in 
  Wordpress.  Oops. :)
- (24 May 09) fixed a bug with token text containing encoded HTML elements
  rather than the text its meant to represent (i.e. &quote; over a ").
  This caused highlighting to mess up in some cases.
- (24 May 09) fixed a bug preventing mispelled words with a hyphen from getting 
  highlighted.
- (24 May 09) fixed a bug where [hookword] [word 1] was causing other phrases with the
  pattern [hookword] [word 1][rest of word] to get highlighted
- (17 May 09) multiword phrases now properly set the "previous" token used as a hook for
  checking if the next word/phrase has an error associated with it.  Naturally this fixes
  a bug where an error following a highlighted phrase isn't highlighted.

Release 15 May 09
-------
- Rewrote the word highlighting code, the new stuff is easier to mantain and much cleaner.
  This plugin is no longer such a bad hack.  It's still a hack though.
- Added the atd_ignore_strings option and the atd_ignore_enable option.  

Release 14 Apr 09
-------
- updated readme to show correct fom for atd_rpc_url.  The variables requires a ?url= at the end.
